# daily-scraper

./: .env.sample  .gitignore  README.md  generate_token.py  pyproject.toml  pyrightconfig.json  scrape.py
.agents/skills/daily-scraper/: SKILL.md
.agents/skills/daily-scraper/references/:  selector-research.md
.github/workflows/: daily-scrape.yml
.zed/: settings.json
gas/: trigger_workflow_dispatch.gs
