[project]
name = "rakuten-shoes-ranking"
version = "0.1.0"
description = "楽天「靴」デイリーランキングTOP10を毎日記録するスクレイパー"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.48.0",
    "gspread==6.1.4",
    "google-auth==2.35.0",
    "google-api-python-client==2.149.0",
    "Pillow==10.4.0",
]

[tool.uv]
package = false
